--- a/views/user/list.ejs
+++ b/views/user/list.ejs
@@ -11,7 +11,7 @@ including header content which is common for all pages
 	<p style="color:green"><%- messages.success %></p>
 <% } %>	
 
-<table width='80%' border=0>
+<table class="table table-hove" width='80%' border=0>
 
 	<tr style='text-align:left; background-color:#CCC'>
 		<th>Name</th>
