--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,11 +1,22 @@
 <html>
 	<head>
 		<title><%= title %></title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 	</head>
 	<body>
 		<div>
-			<a href="/">Home</a> | 
-			<a href="/users/add">Add New User</a> | 
-			<a href="/users">All Users List</a>
+			<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
+				  <div class="navbar-header">
+					<a class="navbar-brand" href="#">User Management</a>
+				  </div>
+				  <ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="/users/add">Add User</a></li>
+					<li><a href="/users">User List</a></li>
+				  </ul>
+				</div>
+			  </nav>
 		</div>	
-		<h1><%= title %></h1>
+	
